overflow on x fix 2

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -147,7 +147,7 @@ header {
 
 #scrollToTop {
   outline: 2px solid red;
-
+  display: none;
   position: fixed;
   opacity: 0;
   bottom: 40px;
